--- a/app/src/locales/locale_en.json
+++ b/app/src/locales/locale_en.json
@@ -2,5 +2,7 @@
     "localeId": "en",
     "localeName": "English",
     "isDefaultLanguage": true,
-    "properties": {}
+    "properties": {
+        "NEXT5DAYS": "Next 5 days"
+    }
 }
